--- a/public/js/auth/login/login.html
+++ b/public/js/auth/login/login.html
@@ -1,16 +1,31 @@
 <h1>THIS IS LOGIN</h1>
-<form class="form" name="form" ng-submit="$ctrl.login(form)" novalidate>
+<form class="loginForm"
+      name="loginForm"
+      ng-submit="$ctrl.login(loginForm)"
+      novalidate>
 
     <div class="form-group">
         <label>Email</label>
 
-        <input type="email" name="email" class="form-control" ng-model="$ctrl.user.email" required>
+        <input type="email"
+               id="username"
+               placeholder="email"
+               name="username"
+               class="form-control"
+               ng-model="$ctrl.user.username"
+               required />
     </div>
 
         <div class="form-group">
             <label>Password</label>
 
-            <input type="password" name="password" class="form-control" ng-model="$ctrl.user.password" required>
+            <input type="password"
+                   id="password"
+                   placeholder="password"
+                   name="password"
+                   class="form-control"
+                   ng-model="$ctrl.user.password"
+                   required />
         </div>
     <div>
         <button class="btn btn-inverse btn-lg btn-login" type="submit">
