--- a/public/js/auth/signup/signup.html
+++ b/public/js/auth/signup/signup.html
@@ -1,1 +1,36 @@
 <h1>This is signup</h1>
+
+<form class="form" name="form" ng-submit="$ctrl.signup(form)" novalidate>
+
+    <div class="form-group">
+        <label>Email</label>
+
+        <input type="email"
+               id="username"
+               name="username"
+               class="form-control"
+               placeholder="email"
+               ng-model="$ctrl.user.username"
+               required />
+    </div>
+
+    <div class="form-group">
+        <label>Password</label>
+
+        <input type="password"
+               id="password"
+               name="password"
+               class="form-control"
+               placeholder="email"
+               ng-model="$ctrl.user.password"
+               required />
+    </div>
+    <div>
+        <button class="btn btn-inverse btn-lg btn-login" type="submit">
+            signup
+        </button>
+        <a class="btn btn-default btn-lg btn-register" ui-sref="login">
+            Here
+        </a>
+    </div>
+</form>
