--- a/public/js/translatedPhrases/phraseIndex/userslanding.html
+++ b/public/js/translatedPhrases/phraseIndex/userslanding.html
@@ -1,5 +1,5 @@
 <hl>Welcome to user landing page</h1>
-    <form ng-submit="$ctrl.save()">
+    <form ng-submit="$ctrl.save()" action="/">
         <input name="english" type="text" id="englishT" ng-model="$ctrl.phrases.english" placeholder="Text to translate" name="search"/>
     </form>
     <button type="submit" value="Save">Submit</button>
