--- a/public/js/translatedPhrases/phraseIndex/userslanding.html
+++ b/public/js/translatedPhrases/phraseIndex/userslanding.html
@@ -1,7 +1,11 @@
+<div ng-controller="">
 <hl>Welcome to user landing page</h1>
-    <form ng-submit="$ctrl.save()" action="/">
+    <form  >
         <input name="english" type="text" id="englishT" ng-model="$ctrl.phrases.english" placeholder="Text to translate" name="search"/>
     </form>
-    <button type="submit" value="Save">Submit</button>
+    <button ng-click="$ctrl.getPhrases()" value="Save">Submit</button>
 
-    <textarea ng-model="$ctrl.phrases.spanish" name="spanish"></textarea>
+<div id="text" class="text">
+    {{$ctrl.phrases.spanish}}
+</div>
+</div>
