--- a/public/js/translatedPhrases/phraseIndex/userslanding.html
+++ b/public/js/translatedPhrases/phraseIndex/userslanding.html
@@ -1,11 +1,11 @@
-<div ng-controller="">
+
 <hl>Welcome to user landing page</h1>
     <form  >
-        <input name="english" type="text" id="englishT" ng-model="$ctrl.phrases.english" placeholder="Text to translate" name="search"/>
+        <input name="english" type="text" id="englishT" ng-model="$ctrl.phrase.english" placeholder="Text to translate"/>
     </form>
     <button ng-click="$ctrl.getPhrases()" value="Save">Submit</button>
 
 <div id="text" class="text">
-    {{$ctrl.phrases.spanish}}
-</div>
+    {{$ctrl.phrase.english}}
+
 </div>
