--- a/public/js/translatedPhrases/phraseIndex/userslanding.html
+++ b/public/js/translatedPhrases/phraseIndex/userslanding.html
@@ -8,4 +8,8 @@
 <div id="text" class="text">
     {{$ctrl.phrase.english}}
 
+    <button ng-click="$ctrl.setPhrases()">SAVE</button>
+    <button ng-click="$ctrl.editPhrases()">EDIT</button>
+
+
 </div>
