able to get to 1 phrase to edit

--- a/public/js/translatedPhrases/phraseShow/phraseShow.html
+++ b/public/js/translatedPhrases/phraseShow/phraseShow.html
@@ -1,1 +1,6 @@
 <h1> SHOW ALL PHRASES</h1>
+<ul>
+    <li class="card-panel"  id='allPhrases' ng-repeat="phrase in $ctrl.savedPhrases">Spanish Phrase: {{phrase.spanish}}
+        <button ng-click="$ctrl.editPhrases(phrase)">EDIT</button>
+    </li>
+</ul>
