--- a/public/js/translatedPhrases/phraseEdit/phraseEdit.html
+++ b/public/js/translatedPhrases/phraseEdit/phraseEdit.html
@@ -1,10 +1,12 @@
 <hl>Welcome to user edit page</h1>
-    <form ng-submit="$ctrl.save()" >
+    <form>
         <input name="english" type="text" id="englishT" ng-model="$ctrl.phrase.english" placeholder="Text to translate"/>
     </form>
-    <button type="submit" value="Save">Submit</button>
+    <button ng-click="update(phrase)" type="submit" value="Save">Submit</button>
 
     <div id="text" class="text">
-        {{$ctrl.phrase.english}}
+        {{$ctrl.phrase.spanish}}
 
     </div>
+
+    ng-submit="$ctrl.save()"
