got edit button working but can not edit

--- a/public/js/translatedPhrases/phraseEdit/phraseEdit.html
+++ b/public/js/translatedPhrases/phraseEdit/phraseEdit.html
@@ -1,12 +1,11 @@
 <hl>Welcome to user edit page</h1>
     <form>
-        <input name="english" type="text" id="englishT" ng-model="$ctrl.phrase.english" placeholder="Text to translate"/>
+        <input name="english" type="text" id="englishT" ng-model="$child.phrase.english" placeholder="Text to translate"/>
     </form>
-    <button ng-click="update(phrase)" type="submit" value="Save">Submit</button>
+    <button ng-click="$ctrl.save()" type="submit" value="Save">Submit</button>
 
     <div id="text" class="text">
         {{$ctrl.phrase.spanish}}
 
     </div>
 
-    ng-submit="$ctrl.save()"
