adding in nav bar and remaining auth

--- a/public/js/navbar/navbar.html
+++ b/public/js/navbar/navbar.html
@@ -1,7 +1,10 @@
-<nav id="navbar">
-    <div class="nav-wrapper">
-        <a ui-sref='createPhrase'>
-            <img id='homeBtn' src="/images/512x512.png" ui-sref="createPhrase">
-        </a>
-
-        <a class="brand-logo">Menu </a>
+<nav>
+    <div ng-show="$ctrl.Auth.isLoggedIn()" class="nav-wrapper">
+        <a  class="brand-logo right">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a class="active item" ui-sref="userslanding">HOME</a></li>
+            <li><a class="active item" ui-sref="phraseShow">MY PHRASES</a></li>
+            <li><a class="active item" ng-click="$ctrl.logout()">LOGOUT</a></li>
+        </ul>
+    </div>
+</nav>
