--- a/public/js/translatedPhrases/phraseIndex/userslanding.html
+++ b/public/js/translatedPhrases/phraseIndex/userslanding.html
@@ -1,5 +1,7 @@
 
 <hl>Welcome to user landing page</h1>
+    <navbar></navbar>
+
     <form>
         <input name="english" type="text" id="englishT" ng-model="$ctrl.phrase.english" placeholder="Text to translate"/>
     </form>
