--- a/public/js/translatedPhrases/phraseShow/phraseShow.html
+++ b/public/js/translatedPhrases/phraseShow/phraseShow.html
@@ -1,4 +1,7 @@
+
 <h1> SHOW ALL PHRASES</h1>
+<navbar></navbar>
+
 <ul>
     <li class="card-panel"  id='allPhrases' ng-repeat="phrase in $ctrl.savedPhrases">Spanish Phrase: {{phrase.spanish}}
         <button ng-click="$ctrl.editPhrases(phrase)">EDIT</button>
