--- a/public/js/welcome/welcome.html
+++ b/public/js/welcome/welcome.html
@@ -1,2 +1,8 @@
-<h1>WELCOME</h1>
+
+<h1>WELCOME TO FAST TALK</h1>
+
+<h4> TRAVELING TO A ANTOHER COUNTRY? LOOK UP AND SAVE FAVORITE AND USEFUL PHRASES IN ANOTHER LANGUAGE! </h4>
+
+<button ui-sref="login">LOGIN</button>
+<button ui-sref="signup">SIGNUP</button>
 
