--- a/public/js/navbar/navbar.html
+++ b/public/js/navbar/navbar.html
@@ -1,10 +1,10 @@
 <nav>
     <div ng-show="$ctrl.Auth.isLoggedIn()" class="nav-wrapper">
-        <a  class="brand-logo right">Logo</a>
+        <a  class="brand-logo right"ng-show="$ctrl.Auth.isLoggedIn()" class="navbar-text">Signed in as {{$ctrl.Auth.getCurrentUserSync().username}}</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li><a class="active item" ui-sref="userslanding">HOME</a></li>
-            <li><a class="active item" ui-sref="phraseShow">MY PHRASES</a></li>
-            <li><a class="active item" ng-click="$ctrl.logout()">LOGOUT</a></li>
+            <li><a class="active item1" ui-sref="userslanding">HOME</a></li>
+            <li><a class="active item2" ui-sref="phraseShow">MY PHRASES</a></li>
+            <li><a class="active item3" ng-click="$ctrl.logout()">LOGOUT</a></li>
         </ul>
     </div>
 </nav>
