--- a/public/js/welcome/welcome.html
+++ b/public/js/welcome/welcome.html
@@ -1,8 +1,34 @@
 
-<h1>WELCOME TO FAST TALK</h1>
+<body>
+<div class="row">
+    <div class="col s12" id="jumbotron">
+        <h1>WELCOME TO FAST TALK</h1>
+    </div>
 
-<h4> TRAVELING TO A ANTOHER COUNTRY? LOOK UP AND SAVE FAVORITE AND USEFUL PHRASES IN ANOTHER LANGUAGE! </h4>
+    <div class="col s12 m2">
+        <br>
+        <br>
+        <img id="bar" class="z-depth-5" src="images/pic_bar.jpg" alt="Picture Bar">
+    </div>
+    <br>
+    <br>
+    <div class="col s12" id="welcomep">
+        <br>
+        <br>
+        <h4> MAKING IT A LITTLE BIT EASIER TO TRAVEL TO ANOTHER COUNTRY AND LEARN A NEW LANGUAGE! </h4>
+    </div>
 
-<button ui-sref="login">LOGIN</button>
-<button ui-sref="signup">SIGNUP</button>
+    <div class="col s12" id="buttons">
+        <br>
+        <br>
+        <button class="massive ui button" ui-sref="login">LOGIN</button>
+        <button class="massive ui button" ui-sref="signup">SIGNUP</button>
+    </div>
+
+</div>
+</body>
+
+
+
+
 
