--- a/public/js/welcome/welcome.html
+++ b/public/js/welcome/welcome.html
@@ -1,8 +1,8 @@
 
 <body>
 <div class="row">
-    <div class="col s12" id="jumbotron">
-        <h1>WELCOME TO FAST TALK</h1>
+    <div class="col s12">
+        <h1 id="jumbotron">WELCOME TO FAST TALK</h1>
     </div>
 
     <div class="col s12 m2">
@@ -15,14 +15,14 @@
     <div class="col s12" id="welcomep">
         <br>
         <br>
-        <h4> MAKING IT A LITTLE BIT EASIER TO TRAVEL TO ANOTHER COUNTRY AND LEARN A NEW LANGUAGE! </h4>
+        <h4 id="welp"> MAKING IT A LITTLE BIT EASIER TO TRAVEL TO ANOTHER COUNTRY AND LEARN NEW LANGUAGES! </h4>
     </div>
 
     <div class="col s12" id="buttons">
         <br>
         <br>
-        <button class="massive ui button" ui-sref="login">LOGIN</button>
-        <button class="massive ui button" ui-sref="signup">SIGNUP</button>
+        <button id="wbutton1" class="massive ui button" ui-sref="login">LOGIN</button>
+        <button id="wbutton2" class="massive ui button" ui-sref="signup">SIGNUP</button>
     </div>
 
 </div>
