added styling to input boxes

--- a/public/js/auth/login/login.html
+++ b/public/js/auth/login/login.html
@@ -5,17 +5,17 @@
       ng-submit="$ctrl.login(loginForm)"
       novalidate>
 
-    <div class="form-group">
-        <label>Email</label>
-
-        <i class="tiny material-icons">email
+    <div class="form-group" style="display: flex; justify-content: center;">
+        <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; width: 30%;">
+            <label>Email</label>
+            <i class="tiny material-icons" style="margin-right: 10px;">email</i>
             <input type="email"
                    id="username"
                    name="username"
                    class="form-control"
                    ng-model="$ctrl.user.username"
-               required />
-        </i>
+                   required />
+        </div>
     </div>
 
         <div class="form-group">
@@ -28,7 +28,7 @@
                        name="password"
                        class="form-control"
                        ng-model="$ctrl.user.password"
-                   required />
+                       required />
             </i>
         </div>
     <div>
