--- a/public/js/translatedPhrases/phraseIndex/userslanding.html
+++ b/public/js/translatedPhrases/phraseIndex/userslanding.html
@@ -12,6 +12,7 @@
                 <input placeholder="Text to translate"
                        type="text"
                        name="english"
+                       id="translateInput"
                        ng-model="$ctrl.phrase.english">
                 <button
                         class="ui left floated button"
