added stying to signup page

--- a/public/js/auth/login/login.html
+++ b/public/js/auth/login/login.html
@@ -5,10 +5,10 @@
       ng-submit="$ctrl.login(loginForm)"
       novalidate>
 
-    <div class="form-group" style="display: flex; justify-content: center;">
-        <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; width: 30%;">
+    <div class="form-group" id="loginI">
+        <div id="loginIn">
             <label>Email</label>
-            <i class="tiny material-icons" style="margin-right: 10px;">email</i>
+            <i class="tiny material-icons" id="icon1">email</i>
             <input type="email"
                    id="username"
                    name="username"
