--- a/public/js/auth/signup/signup.html
+++ b/public/js/auth/signup/signup.html
@@ -6,17 +6,18 @@
       ng-submit="$ctrl.signup(form)"
       novalidate>
 
-    <div class="form-group">
+    <div class="form-group" id="signupI">
+       <div id="signupIn">
         <label>Email</label>
 
-        <i class="tiny material-icons">email
+           <i class="tiny material-icons" id="icon2">email</i>
             <input type="email"
                    id="username"
                    name="username"
                    class="form-control"
                    ng-model="$ctrl.user.username"
                required />
-        </i>
+       </div>
     </div>
 
     <div class="form-group">
