added in more styling and color to all pages except library.

--- a/public/js/navbar/navbar.html
+++ b/public/js/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav>
+<nav id="nav-wrapper">
     <div ng-show="$ctrl.Auth.isLoggedIn()" class="nav-wrapper">
         <a id="userinfo" class="brand-logo right"ng-show="$ctrl.Auth.isLoggedIn()">Signed in as {{$ctrl.Auth.getCurrentUserSync().username}}</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
