--- a/public/js/welcome/welcome.html
+++ b/public/js/welcome/welcome.html
@@ -1,6 +1,5 @@
 
-<body>
-<div class="row">
+<div class="row" id="welcomeb">
     <div class="col s12">
         <h1 id="jumbotron">WELCOME TO FAST TALK</h1>
     </div>
@@ -26,7 +25,6 @@
     </div>
 
 </div>
-</body>
 
 
 
