working to make page more responsive

--- a/public/js/auth/login/login.html
+++ b/public/js/auth/login/login.html
@@ -1,4 +1,4 @@
-<h1 class="loginJ">LOGIN</h1>
+<h1 id="loginJ" class="col s12">LOGIN</h1>
 <form class="loginForm"
       name="loginForm"
       id="loginF"
@@ -8,7 +8,7 @@
     <div class="form-group" id="loginI">
         <div id="loginIn">
             <label>Email</label>
-            <i class="tiny material-icons" id="icon1">email</i>
+        <i class="tiny material-icons" id="icon1">email</i>
             <input type="email"
                    id="username"
                    name="username"
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-        <div class="form-group">
+        <div class="form-group col s12">
             <label>Password</label>
 
             <i class="tiny material-icons">vpn_key
@@ -31,7 +31,7 @@
                        required />
             </i>
         </div>
-    <div>
+
         <br>
         <br>
         <button class="btn btn-inverse btn-lg btn-login"  id="loginbutton" type="submit">
@@ -40,5 +40,5 @@
         <br>
         <br>
         <p class="loginp">Did you want to <a ui-sref="signup">signup</a> instead?</p>
-    </div>
+    <!--</div>-->
 </form>
