--- a/public/js/welcome/welcome.html
+++ b/public/js/welcome/welcome.html
@@ -4,10 +4,10 @@
         <h1 id="jumbotron">WELCOME TO FAST TALK</h1>
     </div>
 
-    <div class="col s12 m2">
+    <div class="col s12">
         <br>
         <br>
-        <img id="bar" class="z-depth-5" src="images/pic_bar.jpg" alt="Picture Bar">
+        <img id="bar" class="col s12" src="images/pic_bar.jpg" alt="Picture Bar">
     </div>
     <br>
     <br>
