--- a/public/js/navbar/navbar.html
+++ b/public/js/navbar/navbar.html
@@ -1,10 +1,23 @@
 <nav id="nav-wrapper">
-    <div ng-show="$ctrl.Auth.isLoggedIn()" class="nav-wrapper">
+    <!--<a href="#" class="button-collapse" data-activates="nav-mobile" data-sidenav="left" data-menuwidth="500" data-closeonclick="false">-->
+
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+    < hr ng-show="$ctrl.Auth.isLoggedIn()" class="nav-wrapper">
         <a id="userinfo" class="brand-logo right"ng-show="$ctrl.Auth.isLoggedIn()">Signed in as {{$ctrl.Auth.getCurrentUserSync().username}}</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a id="1" class="active item1" ui-sref="userslanding">HOME</a></li>
             <li><a id="2" class="active item2" ui-sref="phraseShow">MY PHRASES</a></li>
             <li><a id="3" class="active item3" ng-click="$ctrl.logout()">LOGOUT</a></li>
         </ul>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
+    <!--<a href="#" class="button-collapse" data-activates="nav-mobile" data-sidenav="left" data-menuwidth="500" data-closeonclick="false">-->
+        <ul class="side-nav" id="mobile-demo">
+            <li><a ui-sref="userslanding">HOME</a></li>
+            <li><a ui-sref="phraseShow">MY PHRASES</a></li>
+            <li><a ng-click="$ctrl.logoout()">LOGOUT</a></li>
+        </ul>
+        <!--</a>-->
+
     </div>
 </nav>
